starting to implement a proper cli

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5"
+  },
+  "dependencies": {
+    "gunzip-file": "^0.1.1",
+    "vorpal": "^1.12.0"
   }
 }
