--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "gunzip-file": "^0.1.1",
     "node-watch": "^0.6.0",
