--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   "license": "MIT",
   "devDependencies": {},
   "dependencies": {
-    "gunzip-file": "^0.1.1",
     "node-watch": "^0.6.0",
-    "nodegit": "^0.23.0",
-    "vorpal": "^1.12.0",
-    "vorpal-autocomplete-fs": "0.0.3",
+    "simple-git": "^2.1.0",
+    "yargs": "^15.3.1",
     "zlib": "^1.0.5"
   }
 }
