--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ matrix:
     include:
       - os: osx
         language: node_js
-        node_js: "10"
+        node_js: "12"
   
       # - os: linux
       #   dist: xenial
@@ -11,7 +11,8 @@ matrix:
   
   language: node_js
   node_js:
-    - 10
+    - 12
   
   script:
     - yarn install
+    - node ./test.js
